# pdd

./: .gitignore  Projects.md  README.md
Example-RAG-Formula-1/: README.md
Example-RAG-Formula-1/Performance-Report/: Performance Report.md  Performance Report.xlsx
Example-RAG-Formula-1/scripts/: eval.py
Example-RAG-Formula-1/src/fiaregs/: drivers.py  react_chat.py  utils.py
Example-RAG-Formula-1/src/fiaregs/search/: keyword_search.py  semantic_search.py
Example-RAG-Formula-1/src/fiaregs/search/utils/: data_utils.py
fiaregs/: README.md  pyproject.toml  setup.py
fiaregs/data/: eval_set.json
fiaregs/scripts/: eval.py  expand.py  parse_regs.py  reg_search_cli.py  reg_search_ui.py
fiaregs/src/fiaregs/: custom_eval_metrics.py  drivers.py  pdfreader.py
fiaregs/src/fiaregs/search/: keyword_search.py
fiaregs/src/fiaregs/search/utils/: doctree.py
